# flet-permission-test

./: .gitignore  flet_test_permisions.py  main.py  pyproject.toml  test.py
.github/workflows/: build-linux.yml  build-windows-latest-flutter.yml  build.yml  flutter.yml
app/: contacts_manager.py  main_view.py
wheels/: watchdog-4.0.2-py3-none-any.whl
