# ===============================================================
#          pyproject.toml for the "Silver Bullet" Strategy
# ===============================================================

[project]
name = "permission_test"
version = "1.0.0"
# We define only the direct dependencies of our app here
dependencies = [
"flet==0.28.3",
"flet-cli==0.28.3",
"flet-permission-handler"
# NOTE: 'watchdog' is intentionally omitted here.
# It will be built and installed manually in the build.yml workflow.
]

# ===============================================================
# Flet-specific build settings
# ===============================================================

[tool.flet]
product_name = "Permission Test"

[tool.flet.build.apk.android.permission]
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true

# ===============================================================
# The Critical Flutter Fix
# ===============================================================

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.iol"

# ===============================================================
# Obsolete/Removed Sections
# ===============================================================
# [tool.serious_python] section is removed as it was not effective.
# We are using --no-use-pep517 directly with pip instead.