# ===============================================================
#          The Final pyproject.toml (Master Plan)
# ===============================================================

[project]
name = "permission_test"
version = "1.0.0"
dependencies = [
    "flet==0.28.3",
    "flet-cli==0.28.3",
    "flet-permission-handler",
    # We now declare watchdog here, but we will handle its installation
    # in a special way in the build workflow.
    "watchdog<5.0.0,>=4.0.0"
]

# ===============================================================
# Flet-specific build settings
# ===============================================================

[tool.flet]
product_name = "Permission Test"

[tool.flet.android.permission]
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true

# [THE CRITICAL FIX #1]: Tell serious_python to allow building watchdog from source
[tool.flet.source_packages]
android = ["watchdog"]

# ===============================================================
# The Critical Flutter Fix
# ===============================================================

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"