# ===============================================================
#          pyproject.toml for the B-M-I Strategy
# ===============================================================

[project]
name = "permission_test"
version = "1.0.0"
# We define the dependencies as WE want them to be,
# and let the workflow handle the "hacking" to make them work.
dependencies = [
    "flet==0.28.3",
    "flet-permission-handler"
]

# ===============================================================
# Flet-specific build settings
# ===============================================================

[tool.flet]
product_name = "Permission Test"

[tool.flet.android.permission]
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STATORAGE" = true

# ===============================================================
# The Critical Flutter Fix
# ===============================================================

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"